--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@nationalgrideso.com">angeliki.loukatou@nationalgrideso.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I am a Dr and a Chartered Engineer. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios. I am also the Event Lead of Women in Non-Traditional Roles in National Grid, UK. Prior to this, I was a Lead Research Engineer at the R&D Centre of EDF Energy UK and the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I am a Dr and a Chartered Engineer with the IET, for which I am also a Professional Registration Advisor. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios and contributing on the data and insights to the Bridging the Gap publication. I am also the Strategy Lead of Women in National Grid in the UK, and the Event Lead of Women in Non-Traditional Roles in the UK. I have launced and leading the 'Women in Data and Tech' bi-monthly series. Prior to this, I was a Lead Research Engineer at the R&D Department of EDF Energy in the UK and the Digital Lead of EDF Women's Network. There, I specialised in designing algorithms to optimally invest or dispatch standalone or co-located battery storage assets with solar generation, when participating in multiple electricity markets. Before that, I was a Modelling Analyst at Energy Systems Catapult, working as part of their system integration and innovation team, modelling energy storage, second-life batteries and long-term electricity price forecasting. I pursued a PhD in investment and optimal dispatch of battery storage assets, when co-located with wind generation, at the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently the Industry Chair of the first IET Energy Storage conference in the UK. I have a passion about diversity and inclusion, as well as good coding and data practices, and therefore I hold many relevent volunteering roles.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -72,12 +72,13 @@
                                 <p> Main tasks include: </p>
                                 <ul> 
                                     <li> Engaging with various units across the business to develop, write and publish the Future Energy Scenarios (FES)</li>
-                                    <li> Leading/Coordinating the flexibility dissemination activities regarding FES (supply, demand, electricity storage, hydrogen) </li>
+                                    <li> Leading on data and insights on the Bridging the Gap publication (with focus on accelerating heat decarbonisation in the UK) </li> 
+                                    <li> Leading/Coordinating the stakeholder engagement and flexibility dissemination activities regarding FES (supply, demand, electricity storage, hydrogen) </li>
                                     <li> Advanced data visualisation with Python (matplotlib, plotly, seaborn, dash) </li>
                                     <li> Use of PLEXOS for unit-commitment of future possible credible pathways to 2035/2050 </li>
                                     <li> Design of the data list needed for Future System Operator </li>
-                                    <li> Active member of agile ways of thinking working group </li>
-                                    <li> Event lead for the 'I am remarkable' initiative from the Women in National Grid network </li>
+                                    <li> Strategy lead of Women in National Grid - UK </li>
+                                    <li> Event lead of Women in Non-Traditional Roles in the UK </li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2022 - Present</span></div>
@@ -95,7 +96,6 @@
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
                                     <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website to promote inclusion and diversity matters</li>
                                     <li>Mentor, supervise and coach new and existing team members</li>
-                                    <li>Working towards Chartered Engineering status </li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - September 2022</span></div>   
@@ -207,7 +207,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Data Science: Time series and statistical analysis (SARIMAX), neural networks
+                            Data Science: Time series and statistical analysis, neural networks
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -215,11 +215,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Databases: Queries and Requests from Python or R with SQL 
+                            Databases: Queries and Requests from Python with SQL 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Testing: Linux, AWS deployment 
+                            Agile Development & Testing: Linux, AWS deployment, Azure 
                         </li>
                     </ul>
                     <br>
@@ -313,18 +313,6 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Project Manager</h3>
-                            <div class="subheading mb-3"><a href="https://cigre.org.uk/womens-network/"> Cigre Women in Engineering Network</a></div>
-                                <p> Main tasks include: </p>
-                                <ul> 
-                                    <li> Engaging with various Cigre and industry units to gather knowledge and project requirements for our events</li>
-                                    <li> Organise a series of events around the theme 'Green skills required to work in the North Sea', collaborations with Belgium, Germany, Netherlands</li>
-                                </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">Mentor in the energy sector </h3>
                             <div class="subheading mb-3"><a href="https://thewun.co.uk/mentors/angeliki-loukatou/"> Women in Utilities </a></div>
                                 <p> Main tasks include: </p>
@@ -345,22 +333,16 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Reviewer</h3>
-                            <div class="subheading mb-3">Applied Energy</div>    
-                            <p>Review 3-4 journal articles per year in the area of optimal valuation of energy storage co-located with renewables. </p>
-                            </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2018 - Present</span></div>
-                    </div>
                     <h3 class="mb-0"> Previous roles </h3>
                     <ul>
+                        <li> Project Manager of Cigre Women's Network (Jul. 2021 - Jul. 2023) </li>
                         <li> Digital Lead of EDF Women's Network (Jun. 2020 - Sep. 2022) </li>
                         <li> Vice-chair of the IEEE PES Women in Power Network of the UK&I (Jun. 2020 - Jan. 2022) </li>
                         <li> Event Coordinator at Cigre UK NGN (Nov. 2020 - Oct. 2021) </li> 
                         <li> Membership development officer and student branch coordinator at the national committee of IEEE UK&I PES (Sep. 2019 - Dec. 2020)</li>
                         <li> Website and social media coordinator at IEEE UK&I PES Student Branch Chapter (Feb. 2018 - Feb. 2019) </li>
                         <li> Industry Liaison at IEEE UK&I PES Student Branch Chapter (Jan. 2017 - Jan. 2018) </li>
+                        <li> Active reviewer in the journal of Applied Energy (Jun. 2018 - Jul. 2021) </li>
                         <li> STEM Ambassador in science school festivals (Sep. 2016 - Feb. 2019) </li>
                         <li> Helping with organisation of RLadies Manchester coding and data meetups (Sep. 2016 - Feb. 2019) </li>
                     </ul>                  
@@ -372,6 +354,8 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Future Energy Scenarios, lessons learned with the Strategy, Innovation and Market Analytics Group of National Grid, August 2023. </li>
+                        <li> Official <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios-fes/fes-sections/flexibility"> launch </a> of the Future Energy Scenarios 2023, led storage and flexibility insights, July 2023. </li>
                         <li> When the wind does not blow: Long duration energy storage breakfast briefing with Energy UK and DESNZ, April 2023. Recording <a href="https://us06web.zoom.us/rec/play/mew6KZlMnE4rusKfR4YVauRAVjYuHbHK7n_yn7SIA_nl3R7khl0ych90457dS_HzHE_RiMEUwIPwaVRD.Hzc7fS01UffwHw9D?autoplay=true&startTime=1681977859000"> here</a>. </li>
                         <li> Best practices used when working with electricity storage technologies, IEEE PES Women in Power- Birmingham Webinar, March 2023. </li>
                         <li> Poential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
@@ -451,6 +435,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for leading on the planning, preparation and launch of the Future Energy Scenarios (October - July 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <b> ESO Appreciate Award:</b> 'Find a better way - Embrace the power and opportunity of diversity' for contributing signifcantly to DEI activities across National Grid ESO (April 2023).
                         </li>
                         <li>
@@ -519,7 +507,7 @@
                     <h2 class="mb-5">News</h2>
                     <p>Latest news include:</p>
                     <ul>
-                     <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
+                    <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
                     <li> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </li>
                     <li> I have the honour to be opening the first IET Energy Storage Conference in Glasgow during November 2023.</li>
                     </ul>
