--- a/index.html
+++ b/index.html
@@ -313,6 +313,19 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Professional Registration Advisor</h3>
+                            <div class="subheading mb-3"><a href="https://www.theiet.org/career/professional-registration/chartered-engineer/"> Women in Utilities </a></div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li>Providing advice and guidance to those aspring to become Chartered Engineers (currently 2 people)</li>
+                                    <li>Reviewing their career development and providing potential suggestions for improvements</li>
+                                    <li>Helping potential candidates with their competency framework and their applications</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Mentor in the energy sector </h3>
                             <div class="subheading mb-3"><a href="https://thewun.co.uk/mentors/angeliki-loukatou/"> Women in Utilities </a></div>
                                 <p> Main tasks include: </p>
@@ -335,7 +348,7 @@
                     </div>
                     <h3 class="mb-0"> Previous roles </h3>
                     <ul>
-                        <li> Project Manager of Cigre Women's Network (Jul. 2021 - Jul. 2023) </li>
+                        <li> Project Manager of Cigre UK Women's Network (Jul. 2021 - Jul. 2023) </li>
                         <li> Digital Lead of EDF Women's Network (Jun. 2020 - Sep. 2022) </li>
                         <li> Vice-chair of the IEEE PES Women in Power Network of the UK&I (Jun. 2020 - Jan. 2022) </li>
                         <li> Event Coordinator at Cigre UK NGN (Nov. 2020 - Oct. 2021) </li> 
