--- a/index.html
+++ b/index.html
@@ -314,12 +314,13 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Professional Registration Advisor</h3>
-                            <div class="subheading mb-3"><a href="https://www.theiet.org/career/professional-registration/chartered-engineer/"> Women in Utilities </a></div>
+                            <div class="subheading mb-3"><a href="https://www.theiet.org/career/professional-registration/chartered-engineer/"> IET </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
-                                    <li>Providing advice and guidance to those aspring to become Chartered Engineers (currently 2 people)</li>
+                                    <li>Providing advice and guidance to those aspring to become Chartered Engineers (currently 2 candidates)</li>
                                     <li>Reviewing their career development and providing potential suggestions for improvements</li>
                                     <li>Helping potential candidates with their competency framework and their applications</li>
+                                    <li>Preparing potential candidates for their interviews</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
