--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Opening and closing remarks as the industry chair of the first <a href="https://energystorage.theiet.org"> IET Energy Storage Conference</a>, Glasgow, November 2023.</li>
                         <li> Future Energy Scenarios, lessons learned with the Strategy, Innovation and Market Analytics Group of National Grid, August 2023. </li>
                         <li> Official <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios-fes/fes-sections/flexibility"> launch</a> of the Future Energy Scenarios 2023, led storage and flexibility insights, July 2023. </li>
                         <li> When the wind does not blow: Long duration energy storage breakfast briefing with Energy UK and DESNZ, April 2023. Recording <a href="https://us06web.zoom.us/rec/play/mew6KZlMnE4rusKfR4YVauRAVjYuHbHK7n_yn7SIA_nl3R7khl0ych90457dS_HzHE_RiMEUwIPwaVRD.Hzc7fS01UffwHw9D?autoplay=true&startTime=1681977859000"> here</a>. </li>
@@ -386,6 +387,7 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
+                        <li> 'The route to continuous professional development', <a href="https://www.ieee-ukandireland.org/event/2nd-wie-career-development-workshop-electrical-and-electronic-engineering-career-path-to-net-zero/"> 2nd WIE Career Development Workshop</a> at Electrical and Electronic Engineering Career Path to Net Zero, Notingham, October 2023</li>
                         <li> Transition from academia to industry for young professionals, Supergen Energy Storage Network Conference, October 2022</li>
                         <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022</li>
                         <li> International Women in Engineering Day - Roundtable <a href="https://cigre.org.uk/events/cigre-uk-women-in-engineering-day-round-table-discussion-23rd-june/"> discussion!</a> (How to build emotional resilience when working on demanding projects), Cigre UK, June 2022 (Starting at 22h:00min) </li>
@@ -523,7 +525,6 @@
                     <ul>
                     <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
                     <li> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </li>
-                    <li> I have the honour to be opening the first IET Energy Storage Conference in Glasgow during November 2023.</li>
                     </ul>
                 </div>
             </section>
