--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
-                        <li> 'The route to continuous professional development', <a href="https://www.ieee-ukandireland.org/event/2nd-wie-career-development-workshop-electrical-and-electronic-engineering-career-path-to-net-zero/"> 2nd WIE Career Development Workshop</a> at Electrical and Electronic Engineering Career Path to Net Zero, Notingham, October 2023</li>
+                        <li> 'The route to continuous professional development', <a href="https://www.ieee-ukandireland.org/event/2nd-wie-career-development-workshop-electrical-and-electronic-engineering-career-path-to-net-zero/"> 2nd WIE Career Development Workshop</a> at Electrical and Electronic Engineering Career Path to Net Zero, Nottingham, October 2023</li>
                         <li> Transition from academia to industry for young professionals, Supergen Energy Storage Network Conference, October 2022</li>
                         <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022</li>
                         <li> International Women in Engineering Day - Roundtable <a href="https://cigre.org.uk/events/cigre-uk-women-in-engineering-day-round-table-discussion-23rd-june/"> discussion!</a> (How to build emotional resilience when working on demanding projects), Cigre UK, June 2022 (Starting at 22h:00min) </li>
