--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
                                     <li> Collaboration with UK, Women in Engineering panel during PMAPS, June 2022</li>
                                     <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022 </li>
                                     <li> Women in Power session during MEEPS 2022 "Towards a sustainable and diverse future", November 2022 </li>
+                                    <li> Collaboration with Cigre UK Next Generation Networks, "Enabling the transition to Net Zero", April 2023 </li>
+                                    <li> Celebration of PES day with Women in Power, Prof. Jessica Bien, "Regulatory aspects of implementing advanced technology", April 2023 </li>
+                                    <li> Collaboration with IEEE PES Student Branch Chapter of the University of Manchester, "Pathways to Success: Empowering Women in Power Systems Engineering", September 2023 </li>
+                                    <li> Launch of the first IEEE PES Women in Power Mentoring Programme across Europe, Middle East and Africa </li>
                                 </ol>    
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
@@ -368,6 +372,8 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> How should electricity markets change to accomodate the Net Zero transition?, at the City University of London, December 2023. </li>
+                        <li> Future Energy Scenarios - Knowledge exchange with bp, October 2023.</li>
                         <li> Opening and closing remarks as the industry chair of the first <a href="https://energystorage.theiet.org"> IET Energy Storage Conference</a>, Glasgow, November 2023.</li>
                         <li> Future Energy Scenarios, lessons learned with the Strategy, Innovation and Market Analytics Group of National Grid, August 2023. </li>
                         <li> Official <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios-fes/fes-sections/flexibility"> launch</a> of the Future Energy Scenarios 2023, led storage and flexibility insights, July 2023. </li>
@@ -525,6 +531,11 @@
                     <ul>
                     <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
                     <li> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </li>
+                    <li> I won the 'Outstanding Volunteer of the Year' award from IEEE PES of the UK and Ireland for years of dedicated service to the society and to the power and energy community (December 2023)</li>
+                    <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
+                        <span class="d-block d-lg-none">News</span>
+                        <span class="d-none d-lg-block"><img src="assets/img/IEEE-PES-UKandIreland-Award.jpeg" alt="IEEE PES UK and Ireland award" /></span>
+                    </a>    
                     </ul>
                 </div>
             </section>
