--- a/index.html
+++ b/index.html
@@ -457,6 +457,14 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> IEEE Power and Energy Society UK and Ireland Award:</b> 'Outstanding Volunteer 2023' for years of dedicated services to the society and various contributions to the power and energy sector (December 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Find a better way - Embrace the power and opportunity of diversity' for launching the 'Women in Data & Tech' webinar series, as part of my role of 'Event Lead' within Women in Non-Traditional Roles in National Grid (June 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for leading on the planning, preparation and launch of the Future Energy Scenarios (October - July 2023).
                         </li>
                         <li>
@@ -531,11 +539,7 @@
                     <ul>
                     <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
                     <li> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </li>
-                    <li> I won the 'Outstanding Volunteer of the Year' award from IEEE PES of the UK and Ireland for years of dedicated service to the society and to the power and energy community (December 2023)</li>
-                    <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
-                        <span class="d-block d-lg-none">News</span>
-                        <span class="d-none d-lg-block"><img src="assets/img/IEEE-PES-UKandIreland-Award.jpeg" alt="IEEE PES UK and Ireland award" /></span>
-                    </a>    
+                    <li> I won the 'Outstanding Volunteer 2023' award from the IEEE Power and Energy Society of the UK and Ireland; for years of dedicated service to the society and to the power and energy sector (December 2023)</li>
                     </ul>
                 </div>
             </section>
