--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
-                        <li> How should electricity markets change to accomodate the Net Zero transition?, at the City University of London, December 2023. </li>
+                        <li> How should electricity markets change to accommodate the Net Zero transition?, at the City University of London, December 2023. </li>
                         <li> Future Energy Scenarios - Knowledge exchange with bp, October 2023.</li>
                         <li> Opening and closing remarks as the industry chair of the first <a href="https://energystorage.theiet.org"> IET Energy Storage Conference</a>, Glasgow, November 2023.</li>
                         <li> Future Energy Scenarios, lessons learned with the Strategy, Innovation and Market Analytics Group of National Grid, August 2023. </li>
                         <li> Official <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios-fes/fes-sections/flexibility"> launch</a> of the Future Energy Scenarios 2023, led storage and flexibility insights, July 2023. </li>
                         <li> When the wind does not blow: Long duration energy storage breakfast briefing with Energy UK and DESNZ, April 2023. Recording <a href="https://us06web.zoom.us/rec/play/mew6KZlMnE4rusKfR4YVauRAVjYuHbHK7n_yn7SIA_nl3R7khl0ych90457dS_HzHE_RiMEUwIPwaVRD.Hzc7fS01UffwHw9D?autoplay=true&startTime=1681977859000"> here</a>. </li>
                         <li> Best practices used when working with electricity storage technologies, IEEE PES Women in Power- Birmingham Webinar, March 2023. </li>
-                        <li> Poential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
+                        <li> Potential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
                         <li> Long-term projections of electricity storage in the UK, part of our Future Energy Scenarios (FES) work, January 2023. </li>
                         <li> The role of energy storage in the GB energy system, during Energy Systems Catapult Dissemination Event for Port Decarbonisation, November 2022. </li>
                         <li> Effective ways of working with energy storage, during Manchester's MEEPS Conference, November 2022. </li>
