--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                     <p>Latest news include:</p>
                     <ul>
                     <li> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li> 
-                    <li> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </li>
+                    <li> Hooray! <a href="https://www.theiet.org/">IET</a> nominated me for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award and I won! I gave the Karen Burt Memorial Lecture during December 2023. </li>
                     <li> I won the 'Outstanding Volunteer 2023' award from the IEEE Power and Energy Society of the UK and Ireland; for years of dedicated service to the society and to the power and energy sector (December 2023)</li>
                     </ul>
                 </div>
