--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="subheading mb-3">National Grid ESO, Strategy and Regulation</div>
                                 <p> Main tasks include: </p>
                                 <ul>
-                                    <li> Serving as Interim Insights and Stakeholder Manager within Aug. - Nov. 2024. Main foucs: team supervision, strategic design for stakeholder engagement and growth of FES, strategic alignment with the other network planning processes, leading the FES 25 methodology document.</li>
+                                    <li> Serving as Interim Insights and Stakeholder Manager within Aug. - Nov. 2024. Main focus: team supervision, strategic design for stakeholder engagement and growth of FES, strategic alignment with the other network planning processes, leading the FES 25 methodology document.</li>
                                     <li> Engaging with various units across the business to develop, write and publish the Future Energy Scenarios (FES) for the years 2023, 2024 and 2025</li>
                                     <li> Leading on data analysis and insights with focus on supply side generation modelling and flexibility </li> 
                                     <li> Leading/Coordinating the stakeholder engagement and flexibility dissemination activities regarding FES </li>
