--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Strategic Insight Lead</h3>
-                            <div class="subheading mb-3">National Grid ESO, Strategy and Regulation</div>
+                            <div class="subheading mb-3">National Grid ESO, Strategy and Policy</div>
                                 <p> Main tasks include: </p>
                                 <ul>
                                     <li> Serving as Interim Insights and Stakeholder Manager within Aug. - Nov. 2024. Main focus: team supervision, strategic design for stakeholder engagement and growth of FES, strategic alignment with the other network planning processes, leading the FES 25 methodology document.</li>
