--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> Institute of Engineering and Technology with Women's Engineering Society:</b> 'Outstanding Engineer 2023' for years of dedicated work on energy storage, flexibility and the net zero transition (December 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <b> IEEE Power and Energy Society UK and Ireland Award:</b> 'Outstanding Volunteer 2023' for years of dedicated services to the society and various contributions to the power and energy sector (December 2023).
                         </li>
                         <li>
