--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> Institute of Engineering and Technology with Women's Engineering Society:</b> 'Outstanding Engineer 2023' for years of dedicated work on energy storage, flexibility and the net zero transition (December 2023).
+                           <b> Institute of Engineering and Technology with Women's Engineering Society:</b> 'Outstanding Engineer 2023' for years of dedicated work on energy storage, flexibility and the net zero transition (December 2023). Relevant link for the Karen Burt Award <a href="https://www.engc.org.uk/news/press-releases/2024/wes-2023-karen-burt-memorial-award-for-best-new-female-chartered-engineer-announced-as-dr-kelly-loukatou/">here</a>.
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
