--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Power System Planning and Dispatch (Optimisation): PLEXOS 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Databases: Queries and Requests from Python with SQL 
                         </li>
                         <li>
@@ -546,7 +550,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I am a yoga addict and I like walking in sea and residential areas, as well as visiting bookshops and data meetups!</p>                    
+                    <p>I am passionate about yoga and I like walking in sea and residential areas, as well as visiting bookshops and data meetups!</p>                    
                     <p class="mb-0">When indoors, I would probably spend my free time exploring the latest advancements in energy storage, diversity, leadership and inclusion. I used to keep a <a href="https://beginner-knitting-lessons-learned.blogspot.com/">blog</a> of my knitting experience in the winter months.</p>
                     <p>Some of my previous fundraising pages regarding various running and other challenges can be found <a href="https://fundraise.cancerresearchuk.org/page/angelikis-giving-page-2">here</a> and <a href="https://fundraise.cancerresearchuk.org/page/yogic-lady">here</a>. </p>
                     <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
